--- a/api/noticias/models/noticias.settings.json
+++ b/api/noticias/models/noticias.settings.json
@@ -31,7 +31,7 @@
     },
     "categorias": {
       "via": "noticias",
-      "collection": "categorias"
+      "collection": "categoria"
     }
   }
 }
