--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-users-permissions": "3.6.8",
     "strapi-provider-upload-cloudinary": "^3.6.8",
-    "strapi-utils": "3.6.8"
+    "strapi-utils": "3.6.8",
+    "vue-meta": "^2.4.0"
   },
   "author": {
     "name": "A Strapi developer"
