--- a/api/destacados/models/destacados.settings.json
+++ b/api/destacados/models/destacados.settings.json
@@ -33,6 +33,10 @@
     "categorias": {
       "via": "destacados",
       "collection": "categoria"
+    },
+    "Slug": {
+      "type": "uid",
+      "targetField": "titulo"
     }
   }
 }
