--- a/api/noticias/models/noticias.settings.json
+++ b/api/noticias/models/noticias.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "noticias",
   "info": {
-    "name": "noticias"
+    "name": "noticias",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -32,6 +33,10 @@
     "categorias": {
       "via": "noticias",
       "collection": "categoria"
+    },
+    "Slug": {
+      "type": "uid",
+      "targetField": "titulo"
     }
   }
 }
